--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<div style="position: relative; width: 100%; height: 100%; padding-top: 0;
- padding-bottom: 0; margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
+<div style="position: relative; width: 100%; height: 100%;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF0oqn4_TM&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF0oqn4_TM&#x2F;view?embed">
   </iframe>
 </div>
