--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div style="position: relative; width: 100%; height: 100%;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF0oqn4_TM&#x2F;view?embed">
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF0oqn4_TM&#x2F;view">
   </iframe>
 </div>
