--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <div style="position: relative; width: 100%; height: 100%;">
-  Nice to have widget
+  Nice to have widget; bit it needs work.
 </div>
