--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,3 +1,3 @@
 <div>
-<iframe scr="https://carylis.github.io/Notion-Client-Portal-Top-Banner/" title="Client Portal Top Banner"></iframe>
+<iframe scr="https://carylis.github.io/notion/client-portal-top-banner.html" title="Client Portal Top Banner"></iframe>
 </div>
