--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,3 +1,5 @@
 <div>
-<iframe scr="https://carylis.github.io/notion/index.html" title="Client Portal Top Banner"></iframe>
+<div style="position: relative; width: 100%; height: 100%; background-color:#f5f5f5;">
+  Nice to have widget; bit it needs work.
+</div>
 </div>
