--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,5 +1,5 @@
 <div>
-<div style="position: relative; width: 100%; height: 100%; background-color:#f5f5f5;">
-  Nice to have widget; bit it needs work.
-</div>
+
+  <iframe src="https://carylis.github.io/notion/client-portal-top-banner-widget.html" title=""></iframe>
+
 </div>
