--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,5 +1,5 @@
 <div>
 
-  <iframe src="https://carylis.github.io/notion/client-portal-top-banner-widget.html" title=""></iframe>
+  showing a bit of text
 
 </div>
