--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,5 +1,5 @@
-<div width=100% height=10% background-color=#f5f5f5 text-align="center">
+<div >
 
-  showing a bit of text
+  showing a bit of text HERE
 
 </div>
