--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,4 +1,11 @@
-<div >
+<div style="
+  border: 0;
+  margin: 0;
+  height: 150px;
+  width: 100%;
+  background-color: #f5f5f5;
+  text-align: center;
+  ">
 
   showing a bit of text HERE
 
