--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -3,7 +3,7 @@
   margin: 0;
   height: 150px;
   width: 100%;
-  background-color: #f5f5f5;
+  background-color: red;
   text-align: center;
   ">
 
