--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,10 +1,9 @@
 <div style="
-  border: 0;
-  margin: 0;
-  height: 150px;
-  width: 100%;
-  background-color: red;
-  text-align: center;
+  height: 200px;
+  width: 50%;
+  background-color: #37352f26;
+  color:#37352f;
+  padding: 2.5%;
   ">
 
   showing a bit of text HERE
