--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,9 +1,11 @@
 <div style="
-  height: 200px;
+  height: 100px;
   width: 100%;
+  border:0;
+  margin:0;
   background-color: #37352f26;
-  color:#37352f;
   padding: 2.5%;
+  color:#37352f;
   ">
 
   showing a bit of text HERE
