--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,4 +1,5 @@
 <div style="
+  overflow:hidden;
   width: 100%;
   height: 50px;
   border:0;
@@ -6,6 +7,7 @@
   background-color: #37352f26;
   padding: 2.5%;
   color:#37352f;
+  
   ">
 
   showing a bit of text HERE
