--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,11 +1,12 @@
 <div style="
   overflow:hidden;
+  box-sizing: border-box;
   width: 100%;
   height: 50px;
   border:0;
   margin:0;
   background-color: #37352f26;
-  padding: 2.5%;
+  padding: 1%;
   color:#37352f;
   
   ">
