--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -2,10 +2,10 @@
   overflow:hidden;
   box-sizing: border-box;
   width: 100%;
-  height: 50px;
-  border:0;
+  min-height: 75px;
   margin:0;
-  background-color: #37352f26;
+  border:0;
+  border-color: #37352f26;
   padding: 1%;
   color:#37352f;
   
