--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -3,15 +3,15 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 75px;
-  margin:0;
-  border:0;
+  margin: 0;
+  border: 2px solid;
   border-color: #37352f26;
-  border-radius: 1px;
+  border-radius: 5px;
   padding: 1%;
   color:#37352f;
-  font-size:1rem;
+  font-size: 1rem;
   ">
 
-  showing a bit of text HERE
+  Showing a bit of text HERE
 
 </div>
