--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -1,6 +1,7 @@
 <div style="
-  overflow:hidden;
   box-sizing: border-box;
+  overflow:hidden;
+  position:relative;
   width: 100%;
   min-height: 75px;
   margin: 0;
