--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -5,10 +5,9 @@
   width: 100%;
   min-height: 75px;
   margin: 0;
-  border: 2px solid;
-  border-color: #37352f26;
+  border: 2px solid #37352f26;
   border-radius: 5px;
-  padding: 1%;
+  padding: 1rem;
   color:#37352f;
   font-size: 1rem;
   ">
