--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -8,6 +8,7 @@
   border: 2px solid #37352f26;
   border-radius: 5px;
   padding: 1rem;
+  vertical-align:middle;
   color:#37352f;
   font-size: 1rem;
   ">
