--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -7,12 +7,13 @@
   margin: 0;
   border: 2px solid #37352f26;
   border-radius: 5px;
-  padding: 1rem;
-  vertical-align:middle;
+  padding: 1rem;  
   color:#37352f;
   font-size: 1rem;
   ">
-
+<p style="
+  vertical-align:middle;
+  ">
   Showing a bit of text HERE
-
+</p>
 </div>
