--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -9,7 +9,9 @@
   border-radius: 5px;
   padding: 1rem;  
   color:#37352f;
-  font-size: 1rem;
+  font-size: 2rem;
+  font-family: helvetica;
+  ">
   ">
 <p style="
   vertical-align:middle;
