--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   position:relative;
   width: 100%;
-  min-height: 75px;
+  height: 100px;
   margin: 0;
   border: 2px solid #37352f26;
   border-radius: 5px;
