--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -4,7 +4,7 @@
   position:relative;
   width: 100%;
   height: 100px;
-  margin: 0;
+  margin: 0 5%;
   border: 2px solid #37352f26;
   border-radius: 5px;
   padding: 1.5rem;  
