--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -4,10 +4,10 @@
   position:relative;
   width: 100%;
   height: 100px;
-  margin: 0 5%;
+  margin: 0 1rem;
   border: 2px solid #37352f26;
   border-radius: 5px;
-  padding: 1.5rem;  
+  padding: 1rem;  
   color:#37352f;
   font-size: 1rem;
   font-family: helvetica;
