--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -4,7 +4,7 @@
   position:relative;
   width: 100%;
   height: 100px;
-  margin: 0 1rem;
+  margin: 0;
   border: 1px solid #37352f26;
   border-radius: 5px;
   padding: 1rem;  
