--- a/client-portal-bottom-banner.html
+++ b/client-portal-bottom-banner.html
@@ -38,7 +38,7 @@
     <div class="widget-box>
         <p>
             <i>
-                Showing a bit of text here...
+                Showing a bit of text at the bottom...
             </i>
         </p>
     </div>
