--- a/client-portal-bottom-banner.html
+++ b/client-portal-bottom-banner.html
@@ -35,7 +35,7 @@
 
 <body>
 
-    <div class="widget-box>
+    <div class="widget-box">
         <p>
             <i>
                 Showing a bit of text at the bottom...
