--- a/client-portal-bottom-banner.html
+++ b/client-portal-bottom-banner.html
@@ -36,11 +36,7 @@
 <body>
 
     <div class="widget-box">
-        <p>
-            <i>
-                Showing a bit of text at the bottom...
-            </i>
-        </p>
+        <p><i>Showing a bit of text at the bottom...</i></p>
     </div>
 
 </body>
