--- a/client-portal-left-banner.html
+++ b/client-portal-left-banner.html
@@ -1,22 +1,43 @@
-<div style="
-  
-  box-sizing: border-box;
-  position:relative;
-  width: 100%;
-  min-height: 100px;
-  margin: 0;
-  border: 1px solid #37352f26;
-  border-radius: 5px;
-  padding: 1rem;  
-  color:#37352f;
-  font-size: 1rem;
-  font-family: helvetica;
-  overflow:hidden;
-  ">
-<p style="
-  vertical-align:middle;
-  ">
-  Showing a bit of text here...
-</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Widget</title>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .widget-box {
+            width: 100%;
+            min-height: 100px;
+            border: 1px solid #37352f26;
+            border-radius: 5px;
+            padding: 1rem;
+        }
+
+        p {
+            color: #37352f;
+            font-size: 1rem;
+            font-family: helvetica;
+            vertical-align: middle;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="widget-box">
+        <p><i>Showing a bit of text at the bottom...</i></p>
+    </div>
+
+</body>
+
+</html>
