--- a/client-portal-left-banner.html
+++ b/client-portal-left-banner.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="widget-box">
-        <p><i>Showing a bit of text at the bottom...</i></p>
+        <p><i>Showing a bit of text at the left...</i></p>
     </div>
 
 </body>
