--- a/client-portal-bottom-banner.html
+++ b/client-portal-bottom-banner.html
@@ -5,32 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Widget</title>
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .widget-box {
-            width: 100%;
-            min-height: 100px;
-            border: 1px solid #37352f26;
-            border-radius: 5px;
-            padding: 1rem;
-        }
-
-        p {
-            color: #37352f;
-            font-size: 1rem;
-            font-family: helvetica;
-            vertical-align: middle;
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
