--- a/client-portal-top-banner.html
+++ b/client-portal-top-banner.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-
+<div class="wrapper">
     <div class="widget-box">
         <p><i>Showing a bit of text at the top...</i></p>
     </div>
+ </div>
 
 </body>
 
