--- a/client-portal-bottom-banner.html
+++ b/client-portal-bottom-banner.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-
+<div class="wrapper">
     <div class="widget-box">
         <p><i>Showing a bit of text at the bottom...</i></p>
     </div>
-
+</div>
 </body>
 
 </html>
