--- a/carylis-google-calendar.html
+++ b/carylis-google-calendar.html
@@ -1,6 +1,5 @@
 <iframe src="https://calendar.google.com/calendar/embed?src=carylispalacios%40gmail.com&ctz=America%2FBogota" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 <!-- Google Calendar Appointment Scheduling begin -->
-<link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
 <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
 <script>
 (function() {
@@ -8,8 +7,8 @@
   window.addEventListener('load', function() {
     calendar.schedulingButton.load({
       url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2hi7jhxb-aQnxbDKxI8hpa5cV9HRL3mMI5MRSPxCAn3yeQtDEoVrRv7mHaneBEufz8OanFNYy2?gv=true',
-      color: '#039BE5',
-      label: 'Book an appointment',
+      color: '#000',
+      label: 'Book a Call With Carylis',
       target,
     });
   });
