--- a/carylis-google-calendar.html
+++ b/carylis-google-calendar.html
@@ -1,17 +1,3 @@
-<iframe src="https://calendar.google.com/calendar/embed?src=carylispalacios%40gmail.com&ctz=America%2FBogota" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 <!-- Google Calendar Appointment Scheduling begin -->
-<script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
-<script>
-(function() {
-  var target = document.currentScript;
-  window.addEventListener('load', function() {
-    calendar.schedulingButton.load({
-      url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2hi7jhxb-aQnxbDKxI8hpa5cV9HRL3mMI5MRSPxCAn3yeQtDEoVrRv7mHaneBEufz8OanFNYy2?gv=true',
-      color: '#000',
-      label: 'Book a Call With Carylis',
-      target,
-    });
-  });
-})();
-</script>
+<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2hi7jhxb-aQnxbDKxI8hpa5cV9HRL3mMI5MRSPxCAn3yeQtDEoVrRv7mHaneBEufz8OanFNYy2?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
 <!-- end Google Calendar Appointment Scheduling -->
