--- a/carylis-google-calendar.html
+++ b/carylis-google-calendar.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Widget</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+<div class="wrapper">
+
+
 <!-- Google Calendar Appointment Scheduling begin -->
 <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2hi7jhxb-aQnxbDKxI8hpa5cV9HRL3mMI5MRSPxCAn3yeQtDEoVrRv7mHaneBEufz8OanFNYy2?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
 <!-- end Google Calendar Appointment Scheduling -->
+
+
+</div>
+</body>
+
+</html>
