--- a/carylis-google-calendar.html
+++ b/carylis-google-calendar.html
@@ -22,7 +22,7 @@
     calendar.schedulingButton.load({
       url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2hi7jhxb-aQnxbDKxI8hpa5cV9HRL3mMI5MRSPxCAn3yeQtDEoVrRv7mHaneBEufz8OanFNYy2?gv=true',
       color: '#616161',
-      label: 'Book an appointment',
+      label: 'Book a Call With Carylis',
       target,
     });
   });
